add hack nerd font and fix font loading

--- a/html/src/style/index.scss
+++ b/html/src/style/index.scss
@@ -16,3 +16,8 @@ body {
     height: calc(100% - 10px);
   }
 }
+
+@font-face {
+  font-family: 'Hack Nerd Font';
+  src: url('../fonts/hack-nerd-font.ttf');
+}
